builtinmacrodir	= $(kde_datadir)/kig/builtin-macros
builtinmacro_DATA = \
	circle_by_center_and_line.kigt \
	circle_by_point_and_diameter.kigt \
	circle_by_point_and_segment.kigt \
	equitriangle.kigt \
	evolute.kigt \
	osculating_circle.kigt \
	segment_axis.kigt \
	square.kigt \
	vector_difference.kigt
