INCLUDES=$(all_includes)
noinst_LTLIBRARIES=libmisc.la
noinst_HEADERS = \
	argsparser.h \
	builtin_stuff.h \
	calcpaths.h \
	common.h \
	conic-common.h \
	coordinate.h \
	coordinate_system.h \
	cubic-common.h \
	guiaction.h \
	kignumerics.h \
	kigpainter.h \
	kigtransform.h \
	lists.h \
	object_constructor.h \
	object_hierarchy.h \
	objects.h \
	oldkigformat.h \
	rect.h \
	screeninfo.h \
	special_constructors.h

libmisc_la_SOURCES = \
	argsparser.cpp \
	builtin_stuff.cc \
	calcpaths.cc \
	common.cpp \
	conic-common.cpp \
	coordinate.cpp \
	coordinate_system.cpp \
	cubic-common.cc \
	guiaction.cc \
	kignumerics.cpp \
	kigpainter.cpp \
	kigtransform.cpp \
	lists.cc \
	object_constructor.cc \
	object_hierarchy.cc \
	objects.cpp \
	oldkigformat.cc \
	rect.cc \
	screeninfo.cc \
	special_constructors.cc

libmisc_la_LIBADD=-lm
METASOURCES=AUTO
