INCLUDES=$(all_includes)

noinst_LTLIBRARIES=libmodes.la
libmodes_la_SOURCES=mode.cc normal.cc moving.cc constructing.cc \
	macro.cc macrowizardbase.ui popup.cc macrowizard.cc \
	typesdialogbase.ui typesdialog.cpp textlabelwizardbase.ui \
	textlabelwizard.cc label.cc linkslabel.cpp dragrectmode.cc \
	selectionmode.cc base_mode.cc
noinst_HEADERS=mode.h normal.h moving.h constructing.h macro.h \
	popup.h macrowizard.h typesdialog.h textlabelwizard.h \
	label.h linkslabel.h dragrectmode.h selectionmode.h \
	base_mode.h

METASOURCES=AUTO
