INCLUDES=$(all_includes)

noinst_LTLIBRARIES=libmodes.la
libmodes_la_SOURCES=mode.cc normal.cc moving.cc \
	macro.cc macrowizardbase.ui popup.cc macrowizard.cc \
	typesdialogbase.ui typesdialog.cpp textlabelwizardbase.ui \
	textlabelwizard.cc label.cc linkslabel.cpp dragrectmode.cc \
	base_mode.cc construct_mode.cc
noinst_HEADERS=mode.h normal.h moving.h macro.h \
	popup.h macrowizard.h typesdialog.h textlabelwizard.h \
	label.h linkslabel.h dragrectmode.h \
	base_mode.h construct_mode.h

METASOURCES=AUTO
