INCLUDES=$(all_includes)

noinst_LTLIBRARIES=libmodes.la
libmodes_la_SOURCES= \
	base_mode.cc \
	construct_mode.cc \
	dragrectmode.cc \
	edittype.cc \
	edittypebase.ui \
	label.cc \
	linkslabel.cpp \
	macro.cc \
	macrowizard.cc \
	macrowizardbase.ui \
	mode.cc \
	moving.cc \
	normal.cc \
	popup.cc \
	textlabelwizard.cc \
	textlabelwizardbase.ui \
	typesdialog.cpp \
	typesdialogbase.ui
noinst_HEADERS=\
	base_mode.h \
	construct_mode.h \
	dragrectmode.h \
	edittype.h \
	label.h \
	linkslabel.h \
	macro.h \
	macrowizard.h \
	mode.h \
	moving.h \
	normal.h \
	popup.h \
	textlabelwizard.h \
	typesdialog.h

METASOURCES=AUTO
