INCLUDES=$(all_includes)
noinst_LTLIBRARIES=libobjects.la
noinst_HEADERS=\
	angle_type.h \
	arc_type.h \
	base_type.h \
	bogus_imp.h \
	circle_imp.h \
	circle_type.h \
	polygon_type.h \
	common.h \
	conic_imp.h \
	conic_types.h \
	cubic_imp.h \
	cubic_type.h \
	curve_imp.h \
	intersection_types.h \
	inversion_type.h \
	line_imp.h \
	line_type.h \
	locus_imp.h \
	object_calcer.h \
	object_drawer.h \
	object_factory.h \
	object_holder.h \
	object_imp.h \
	object_imp_factory.h \
	object_type.h \
	object_type_factory.h \
	other_imp.h \
	other_type.h \
	point_imp.h \
	polygon_imp.h \
	tangent_type.h \
	centerofcurvature_type.h \
	tests_type.h \
	text_imp.h \
	text_type.h \
	transform_types.h \
	vector_type.h
libobjects_la_SOURCES=\
	angle_type.cc \
	arc_type.cc \
	base_type.cc \
	bogus_imp.cc \
	circle_imp.cc \
	circle_type.cc \
	polygon_type.cc \
	common.cc \
	conic_imp.cc \
	conic_types.cc \
	cubic_imp.cc \
	cubic_type.cc \
	curve_imp.cc \
	intersection_types.cc \
	inversion_type.cc \
	line_imp.cc \
	line_type.cc \
	locus_imp.cc \
	object_calcer.cc \
	object_drawer.cc \
	object_factory.cc \
	object_holder.cc \
	object_imp.cc \
	object_imp_factory.cc \
	object_type.cc \
	object_type_factory.cc \
	other_imp.cc \
	other_type.cc \
	point_imp.cc \
	point_type.cc \
	polygon_imp.cc \
	tangent_type.cc \
	centerofcurvature_type.cc \
	tests_type.cc \
	text_imp.cc \
	text_type.cc \
	transform_types.cc \
	vector_type.cc
libobjects_la_LIBADD=-lm
METASOURCES=AUTO
